# book-catalog-main

./: .envexample  README.md  pyproject.toml  requirements.txt
accounts/: backends.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_emailverification_expiration_and_more.py  0003_alter_user_email.py
books/: admin.py  filters.py  models.py  serializers.py  views.py
books/migrations/: 0001_initial.py  0002_alter_review_options_alter_favoriteuserbook_user.py
config/: settings.py  urls.py
